--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -222,57 +222,166 @@ form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search
 
 /* Bflex Calculator - 'see results' form styles */
 
-.webform-submission-gated-form-bflex-form {
+.path-bflex-calculator .webform-submission-gated-form-bflex-form {
   display: flex;
   flex-wrap: wrap;
 }
 
-.webform-submission-gated-form-bflex-form>* {
+.path-bflex-calculator .webform-submission-gated-form-bflex-form>* {
   flex-basis: 100%;
 }
 
-.webform-submission-gated-form-bflex-form .form-item-first-name input,
-.webform-submission-gated-form-bflex-form .form-item-last-name input,
-.webform-submission-gated-form-bflex-form .form-item-email input {
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-first-name input,
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-last-name input,
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-email input {
   height: 2.125rem;
 }
 
-.webform-submission-gated-form-bflex-form .form-item-first-name {
-  padding-right: 12px;
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-type-checkbox {
+	display: block;
+	padding-bottom: 0;
 }
 
-.webform-submission-gated-form-bflex-form .form-item-last-name {
-  padding-left: 12px;
-}
-
-.webform-submission-gated-form-bflex-form .form-type-checkbox {
-  display: block;
-}
-
-.webform-submission-gated-form-bflex-form .form-type-checkbox label {
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-type-checkbox label {
   display: inline-block;
   text-align: left;
   color: gray;
-  margin-bottom: 6px;
-  font-weight: bold;
+  margin-bottom: .375rem;
+	font-weight: bold;
+	line-height: 21px;
 }
 
-.webform-submission-gated-form-bflex-form .form-type-checkbox .webform-element-description {
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-type-checkbox .webform-element-description {
   display: inline;
   line-height: 1.5;
-  padding-left: 5px;
+  padding-left: .3125rem;
   font-weight: normal;
-  color: gray;
+	color: gray;
+	font-size: 1rem;
 }
 
-.webform-submission-gated-form-bflex-form .form-type-checkbox .webform-element-description a {
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-type-checkbox .webform-element-description a {
   text-decoration: none;
   color: #0d6efd;
 }
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-checkbox{
+	opacity: 1;
+	appearance: auto;
+	float: left;
+	width: .75rem;
+	height: .75rem;
+	position: relative;
+	top: .25rem;
+	margin-right: .1875rem;
+}
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-email-communications label:before{
+  display: none;
+}
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-email-communications label{
+	display: block;
+	margin-bottom: .5rem;
+}
+.path-bflex-calculator .ui-dialog-content .form-actions{
+	padding: 0;
+}
+.path-bflex-calculator .ui-dialog-content{
+	padding: .625rem 1.875rem;
+}
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-email-communications p{
+	margin-bottom: 0;
+}
+.path-bflex-calculator .webform-ajax-form-wrapper:before{
+	content: url(../../../custom/verathon_bflex_calculator/images/GlideScope_Logo_Blue.png);
+	display: flex;
+	justify-content: center;
+	margin: .5rem 0 1.5rem;
+}
+.path-bflex-calculator .webform-submission-gated-form-bflex-form:before{
+	content: "Please fill out the form to see your results.";
+	margin: .5rem auto 1.25rem;
+	font-size: 1.125rem;
+	text-align: center;
+	line-height: 1.3125rem;
+}
+.path-bflex-calculator .ui-dialog .ui-dialog-buttonpane{
+	border: none;
+	padding: 0 1.875rem 1.875rem;
+}
+.path-bflex-calculator .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset{
+	float: left;
+}
+.path-bflex-calculator .ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset button{
+	border-radius: 0;
+	border: none;
+	background: #157cd1;
+	color: #fff;
+	font: .875rem;
+	display: inline-block;
+	vertical-align: top;
+	text-decoration: none;
+	padding: .4375rem 1.0625rem;
+	text-transform: uppercase;
+}
+.path-bflex-calculator .ui-widget-header{
+	border: none;
+	background-color: white;
+}
+.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-email-communications .description,
+.path-bflex-calculator .ui-widget-header .ui-dialog-title,
+.path-bflex-calculator .ui-dialog .ui-dialog-titlebar-close .ui-icon.ui-icon-closethick{
+	display: none;
+}
+.path-bflex-calculator .ui-dialog .ui-dialog-titlebar-close{
+	border-radius: 0;
+  color: #fff;
+	font-size: .8125rem;
+  text-transform: uppercase;
+  background: #157cd1;
+  border-color: #157cd1;
+	float: right;
+	width: auto;
+	margin: 0;
+	height: auto;
+	text-indent: 0%;
+	font-weight: 600;
+	padding: .25rem .625rem;
+	position: relative;
+  top: -0.1875rem;
+  left: .1875rem;
+}
+.path-bflex-calculator .ui-widget.ui-widget-content{
+	border: .0625rem solid #555555;
+}
+.path-bflex-calculator .ui-dialog input{
+	background-color: white;
+	border: .0625rem solid #999;
+	outline: none;
+}
 
-.webform-submission-gated-form-bflex-form .form-item-first-name,
-.webform-submission-gated-form-bflex-form .form-item-last-name {
+.path-bflex-calculator .ui-dialog .ui-dialog-titlebar{
+	padding: 0;
+}
+.path-bflex-calculator .ui-widget-overlay{
+	background-color: black;
+	opacity: .5;
+}
+
+@media screen and (min-width: 768px){
+	.path-bflex-calculator .ui-dialog{
+		min-width: 31.25rem;
+	}
+	.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-first-name,
+	.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-last-name {
   flex-basis: 50%;
+	}
+
+	.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-first-name {
+  padding-right: .75rem;
+	}
+
+	.path-bflex-calculator .webform-submission-gated-form-bflex-form .form-item-last-name {
+	padding-left: .75rem;
+	}
 }
 
 /* Pager Styles in Support page */
